examples/test/testpolicy9753.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9753
  namespace: namespace430
spec:
  podSelector:
    matchLabels:
      key26: value15
      key33: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value8
          key7: value46
      podSelector:
        matchLabels:
          key49: value24
